--- a/angular/core/css/main.scss
+++ b/angular/core/css/main.scss
@@ -6,3 +6,14 @@
 @import '1_lmo_form.scss';
 @import '1_lmo_card.scss';
 @import '1_lmo_headers.scss';
+
+body { position: static; }
+
+.lmo-sidebar-and-main-container {
+  position: relative;
+}
+
+.lmo-main-content{
+  overflow-y: scroll;
+  position: relative;
+}
